/**
 * Copyright 2018-2021 Polyaxon, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/

syntax = "proto3";

package v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

import "v1/polyboard/artifact.proto";

option go_package = "v1/polyboard";

// Chart spec definition
message EventChart {
    // Chart kind
    enum Kind {
        // Plotly chart
        plotly = 0;

        // Bokeh chart
        bokeh = 1;

        // Vega chart
        vega = 2;
    }

    // Chart kind
    Kind kind = 1;

    // Figure json object
    google.protobuf.Struct figure = 2;
}

// Custom Curve spec definition
message EventCurve {
    // Curve kind
    enum Kind {
        // ROC curve
        roc = 0;

        // Precision Recall curve
        pr = 1;

        // Custom curve
        custom = 2;
    }

    // Curve kind
    Kind kind = 1;

    // X
    repeated float x = 2;

    // Y
    repeated float y = 3;

    // Annotation
    string annotation = 4;
}

// Histogram spec definition
message EventHistogram {
    repeated double values = 1;
    repeated double counts = 2;
};

// Image spec definition
message EventImage {
    // Height of the image.
    int32 height = 1;

    // Width of the image.
    int32 width = 2;

    // Valid colorspace values are
    //   1 - grayscale
    //   2 - grayscale + alpha
    //   3 - RGB
    //   4 - RGBA
    //   5 - DIGITAL_YUV
    //   6 - BGRA
    int32 colorspace = 3;

    // Filepath
    string path = 4;
}

// Video spec definition
message EventVideo {
    // Height of the video.
    int32 height = 1;

    // Width of the video.
    int32 width = 2;

    // Valid colorspace values are
    //   1 - grayscale
    //   2 - grayscale + alpha
    //   3 - RGB
    //   4 - RGBA
    //   5 - DIGITAL_YUV
    //   6 - BGRA
    int32 colorspace = 3;

    // Filepath
    string path = 4;

    // Content type of the video
    string content_type = 5;
}

// Audio spec definition
message EventAudio {
    // Sample rate of the audio in Hz.
    float sample_rate = 1;

    // Number of channels of audio.
    int32 num_channels = 2;

    // Length of the audio in frames (samples per channel).
    int32 length_frames = 3;

    // Content type of the audio
    string content_type = 4;

    /// Filepath
    string path = 5;
}

// Artifact spec definition
message EventArtifact {
    // Artifact kind
    ArtifactKind kind = 1;

    // Filepath
    string path = 2;
}

// Model spec definition
message EventModel {
    // Model framwork
    string framework = 1;

    // Filepath
    string path = 2;

    // Model spec (a dictionnary defnining the requirement for the model)
    google.protobuf.Struct spec = 3;
}

// Dataframe spec definition
message EventDataframe {
    // Filepath
    string path = 1;

    // Format
    string content_type = 2;
}

// Event spec definition
message Event {
    // Optional time when the entity was created
    google.protobuf.Timestamp timestamp = 1;

    // Global step of the event.
    int32 step = 2;

    // Value associated with the tag.
    oneof value {
        float metric = 3;
        EventImage image = 4;
        EventHistogram histogram = 5;
        EventAudio audio = 6;
        EventVideo video = 7;
        string html = 8;
        string text = 9;
        EventChart chart = 10;
        EventModel model = 11;
        EventArtifact artifact = 12;
        EventDataframe dataframe = 13;
        EventCurve curve = 14;
    }
}

// Events response definition
message EventsResponse {
    // Events data
    repeated google.protobuf.Struct data = 1;
}
