/**
 * Copyright 2018-2021 Polyaxon, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/

syntax = "proto3";

package v1;

option go_package = "v1/types";

// File type specification
message FileType {
    // File content
    string content = 1;

    // A name to give to the generated file
    string filename = 2;

    // An optional permissions to apply to the file after creation, e.g +x
    string chmod = 3;

    // An optional Artifact kind to log the lineage information
    string kind = 4;
}
